--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         </div>
     </header>
 
-
+    <!-- Banner -->
+    <section class="banner">
+        <div class="banner-content">
+            <img src="assets/logo-dark.png" alt="Bangladesh Logo" class="banner-logo">
+            <h1>Emergency Service Directory</h1>
+            <p>Government Emergency Services at Your Fingertip – A Project by Government of the People's Republic of
+                Bangladesh</p>
+        </div>
+    </section>
 
 
 </body>
