--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
                 Bangladesh</p>
         </div>
     </section>
-
+    <!-- Main section -->
     <main class="container">
-        <!-- Cards -->
         <section class="cards">
-            <!-- Card 1 -->
             <div class="card">
-                <i class="fa-regular fa-heart heart"></i> <!-- Font Awesome heart -->
+                <i class="fa-regular fa-heart heart"></i>
 
                 <div class="card-icon">
                     <img src="assets/emergency.png" alt="emergency">
@@ -54,17 +52,15 @@
                 <h3 class="card-title">National Emergency Number</h3>
                 <p class="card-subtitle">National Emergency</p>
                 <div class="card-number">999</div>
-                <span class="card-badge">Police</span>
+                <span class="card-badge">All</span>
 
                 <div class="card-footer">
                     <button class="btn btn-copy"><i class="fa-regular fa-copy"></i> Copy</button>
                     <button class="btn btn-call"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-
-            <!-- Duplicate Card Example -->
             <div class="card">
-                <i class="fa-regular fa-heart heart"></i> <!-- Font Awesome heart -->
+                <i class="fa-regular fa-heart heart"></i>
 
                 <div class="card-icon">
                     <img src="assets/police.png" alt="emergency">
@@ -80,10 +76,8 @@
                     <button class="btn btn-call"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-
-            <!-- Another Card -->
             <div class="card">
-                <i class="fa-regular fa-heart heart"></i> <!-- Font Awesome heart -->
+                <i class="fa-regular fa-heart heart"></i>
 
                 <div class="card-icon">
                     <img src="assets/fire-service.png" alt="emergency">
@@ -99,10 +93,8 @@
                     <button class="btn btn-call"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-
-            <!-- Card 4 -->
             <div class="card">
-                <i class="fa-regular fa-heart heart"></i> <!-- Font Awesome heart -->
+                <i class="fa-regular fa-heart heart"></i>
 
                 <div class="card-icon">
                     <img src="assets/ambulance.png" alt="emergency">
@@ -118,10 +110,8 @@
                     <button class="btn btn-call"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-
-            <!-- Duplicate Card Example -->
             <div class="card">
-                <i class="fa-regular fa-heart heart"></i> <!-- Font Awesome heart -->
+                <i class="fa-regular fa-heart heart"></i>
 
                 <div class="card-icon">
                     <img src="assets/emergency.png" alt="emergency">
@@ -140,7 +130,7 @@
 
 
             <div class="card">
-                <i class="fa-regular fa-heart heart"></i> <!-- Font Awesome heart -->
+                <i class="fa-regular fa-heart heart"></i>
 
                 <div class="card-icon">
                     <img src="assets/brac.png" alt="emergency">
@@ -166,7 +156,7 @@
             <ul id="historyList"></ul>
         </aside>
     </main>
-    
+
 
 </body>
 
