--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
                 <button class="clear-btn" id="clearHistory">Clear</button>
             </div>
             <ul id="historyList"></ul>
+
+            <!--history item -->
+            <template id="historyTemplate">
+                <li class="history-item">
+                    <div class="history-left">
+                        <h3 class="history-name"></h3>
+                        <p class="history-number"></p>
+                    </div>
+                    <div class="history-time"></div>
+                </li>
+            </template>
         </aside>
     </main>
 
